deployments/hub.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app: hub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    app: hub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      hostAliases:
        - ip: "192.168.65.2"
          hostnames:
            - 'host.minikube.internal'
      containers:
      - name: hub
        image: atastrophic/hub:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 9999
